--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body{
 h1{
     font-size: 50px;
 }
-section{
+.flexible-section{
     display: flex;
     margin-bottom: 150px;
 }
@@ -32,4 +32,31 @@ section{
     background-image: url(dream-bg.png);
     background-repeat: no-repeat;
     background-position: right;
+}
+.Experience-item{
+    width: 40%;
+    margin-left: 5%;
+    margin-right: 5%;
+    box-shadow: 10px 10px 50px gray;
+    padding-left: 20px;
+    border-radius: 10px;
+    border-left: 10px solid black;
+}
+.Experience{
+    background-image: url(exp-bg.png);
+    background-repeat: no-repeat;
+    background-position: left;
+}
+#web-developer-experience{
+    border-left: 7px solid;
+    border-image:linear-gradient(blue,cyan);
+    border-image-slice:1;
+}
+#full-stack-experience{
+    border-left: 7px solid;
+    border-image:linear-gradient(salmon,tomato);
+    border-image-slice:1;
+}
+footer p{
+    text-align: center;
 }
